# UNER_Tesis_GUI_SCPA

./: CMakeLists.txt  ConnectPage.qml  GUI_SCPA.pro  HMIState.qml  PiletaLodosActivos.qml  ProgressBarCircular.qml  README.md  guiscpamanager.cpp  guiscpamanager.h  hmiclientmanager.cpp  hmiclientmanager.h  hmimanager.cpp  hmimanager.h  hmiprotocolmanager.cpp  hmiprotocolmanager.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  src.qrc
android/: AndroidManifest.xml
dialogs/: HMIDialogClientErrorConnected.qml  HMIDialogClientErrorDisconnected.qml  HMIDialogLoginTimeOut.qml  HMIDialogOtherUserLogin.qml
items/: HMIButton.qml  HMICircularProgressBar.qml  HMIDialogClientDisconnect.qml  HMIDialogLoginCorrect.qml  HMIDialogLoginError.qml  HMIDialogLoginForceRequired.qml  HMISCPAChartView.qml  HMISCPAMotorStatus.qml  HMISCPAVariableIndicator.qml
pages/: HMIConnect.qml  HMIConnectForm.ui.qml  HMILogin.qml  HMILoginForm.ui.qml  HMISCPAControlador.qml  HMISCPAControladorForm.ui.qml  HMISCPASimulacion.qml  HMISCPASimulacionForm.ui.qml  HMISCPASopladores.qml  HMISCPASopladoresForm.ui.qml  HMISCPATop.qml  HMISCPATopForm.ui.qml  PageConnect.qml  PageHome.qml  PageLogin.qml  PageLogining.qml  PageSCPATop.qml
qml/: MotorValue.qml  PiletaLodosActivos.qml  VariableProgressBar.qml  main.qml
